--- a/a.css
+++ b/a.css
@@ -50,8 +50,12 @@ span{
 
 h1{
     text-align: center;
+    font-size: 3rem;
 }
 
+p{
+    font-size: 1rem;
+}
 
 @media (width < 990px){
     .colums{
